# listenai-server

./: INSTALL.md  README.md  requirements.txt
asr/: ASR_WEBSOCKET_API.md  asr_websocket_server.py  auto.sh  websocket_asr_client.html
cloud/: .env  LLM_WEBSOCKET_API.md  auto.sh  commit.txt  test_client.html
cloud/src/: __init__.py  asr_client.py  audio_buffer.py  client_tools.py  config.py  girlfriend_manager.py  llm_client.py  mcp_manager.py  protocol.py  roleplay_manager.py  server.py  session.py  tts_client.py
docs/: STORY-V1.1.md  STORY.md
llm/: Qwen3-4B-Instruct-2507.sh  requirements.txt
music/: API.md  README.md  generate_images_from_lyrics.py  get_lyrics.py  pyproject.toml  requirements.txt  server.py  web_server.py
tts/: .env.example  .gitignore  DESIGN.md  PROTOCOL.md  README.md  STORY.md  TTS_WEBSOCKET_PROTOCOL.md  auto.sh  pyproject.toml  requirements.txt
tts/config/: prometheus.yml
tts/examples/: client_example.py
tts/scripts/: start.sh  stop.sh
tts/src/: __init__.py  audio_processor.py  config.py  connection.py  errors.py  http_server.py  logging_config.py  main.py  message_handler.py  metrics.py  model_cache.py  model_worker.py  queue.py  server.py  session.py  tasks.py  validators.py  voice_manager.py
tts/src/models/: __init__.py  messages.py
tts/tests/: __init__.py  test_audio_processor.py  test_integration.py  test_messages.py  test_validators.py
tts/voice_clone/: download_doubao.py
tts/web/: app.js  index.html
